--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 body {
-background-color:black
-
-
+    background-color: black;
+    color: red;
+    font-family: Arial, Helvetica, sans-serif
+    margin; 0px;
 }
-    
-
-)
+h1{
+   color:aqua;
+   font-size: 40px;  
+}
+p{
+    font-size: 25px;
+}
+header{
+    border-bottom: coral;
+    margin: 2px;
+    padding: 10px;
+    color: blue;
+}
